--- a/AgentForce_TestGen/package.json
+++ b/AgentForce_TestGen/package.json
@@ -13,8 +13,8 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "jest": "^30.0.5"
-  }
+  },
+  "description": ""
 }
